# django-charid-field

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  README  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: tox.yml
charidfield/: __init__.py  fields.py
cuidfield/: __init__.py  cuid.py  exceptions.py  fields.py  validation.py
my_app/: __init__.py
tests/: forms.py  helpers.py  models.py  settings.py  test_cuid.py  test_fields.py  test_forms.py  test_my_app.py
tests/fixtures/: cuidmodels_invalid.json  cuidmodels_valid.json  idmodels.json  idmodels_invalid.json  idmodels_valid.json
